# game_of_life

./: .gitignore  LICENSE  README.md
C/: Makefile  README.md  life  life.c  life.h  logic.c  test_logic.c
C++/: CMakeLists.txt  README.md  c_cpp_properties.json  geometry.ods  notes.md
C++/inc/: life.hpp
C++/src/: catch2_Main.cpp  demo.cpp  life-wxw.cpp  life.cpp  logic.cpp  options.cpp  test_logic.cpp  test_util.cpp  util.cpp
